# Auto-remediation-EventMesh

./: .env.example  .gitignore  CLIENT_DEPLOYMENT.md  Observer.iflw  README.md  ROUTES_DOCUMENTATION.md  main.py  migrate_hana_table.py  premortem-report-20260526.html  premortem-transcript-20260526.md  pyproject.toml  requirements.txt  seed_demo_data.py  smart_monitoring.py  smart_monitoring_dashboard.py
.claude/: settings.local.json
aem/: event_bus.py
agents/: base.py  classifier_agent.py  fix_agent.py  fix_applier.py  fix_component_replacer.py  fix_context.py  fix_generator.py  fix_planner.py  fix_supervisor.py  fix_validator.py  fix_xml_analyst.py  observer_agent.py  orchestrator_agent.py  rca_agent.py  verifier_agent.py
calm/: __init__.py  alerts_api.py  auth.py  exceptions_api.py  incident_adapter.py  models.py
core/: constants.py  mcp_manager.py  runtime_config.py  state.py  validators.py  xml_patcher.py
cpi_monitor/: cpi_poller.py  error_publisher.py
db/: database.py
docs/: FRONTEND_DEPLOYMENT.md  deployment.md  index.md
event_mesh/: event_bus.py
frontend/: .env.production  index.html  manifest.yaml  package.json
ingestion/: __init__.py  calm_poller.py  dedup.py  webhook_receiver.py
integrations/: itsm_client.py
jobs/: calm_feedback_job.py  itsm_poller.py
monitoring/: llm_monitor.py
scripts/: debug_get_iflow_extract.py  discover_calm_managed_objects.py  initial_load.py  migrate_hana_table.py  probe_gpt53_response.py  seed_demo_data.py
skills/: sap-cpi-reference.md
ui/: index.html
utils/: logger_config.py  utils.py  vector_store.py
(+81 files in other folders)
