[project]
name = "mcp-client-all"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "anyio>=4.9.0",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "cachetools>=5.0.0",
    "duckduckgo-search>=7.0.0",
    "fastapi>=0.115.0",
    "fastmcp>=2.14.5",
    "hdbcli>=2.28.20",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "playwright>=1.58.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.0.0",
    "sap-ai-sdk-gen==6.1.2",
    "structlog>=24.0.0",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.29.0",
    "yaspin>=3.0.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8.0",
]
